--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,6 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="pressed_color">#4d90fe</color>
-    <color name="default_color">#ffffff</color>
+    <color name="pressed_color">#F5B237</color>
+    <color name="default_color">#00000000</color>
 </resources>
