--- a/app/src/main/res/layout/activity_live_recording.xml
+++ b/app/src/main/res/layout/activity_live_recording.xml
@@ -10,9 +10,10 @@
         android:id="@+id/PauseButton"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:background="#FB8C00"
+        android:background="@drawable/rounded_button"
         android:onClick="pauseButtonTapped"
-        android:text="Pause"
+        android:text="@string/pause"
+        android:textColor="@color/off_white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -21,9 +22,9 @@
 
     <View
         android:id="@+id/lineView"
-        android:layout_width="3dp"
+        android:layout_width="2dp"
         android:layout_height="0dp"
-        android:background="#4D4C4C"
+        android:background="#929191"
         app:layout_constraintBottom_toTopOf="@+id/PauseButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -50,23 +51,79 @@
         android:id="@+id/timerTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="80dp"
-        android:layout_marginRight="80dp"
-        android:text="Timer"
+        android:layout_marginTop="25dp"
+        android:text="@string/timer"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/PauseButton"
         app:layout_constraintEnd_toStartOf="@+id/lineView"
-        app:layout_constraintTop_toTopOf="@+id/lineView" />
+        app:layout_constraintHorizontal_bias="0.556"
+        app:layout_constraintStart_toStartOf="@+id/view"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/HRTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text='"HeartRate"'
+        android:text="@string/heartrate"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="@+id/HRPlot"
         app:layout_constraintStart_toStartOf="@+id/HRPlot"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:onClick="mapButtonTapped"
+        android:text="@string/show_map"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:background="#929191"
+        app:layout_constraintBottom_toBottomOf="@+id/PauseButton"
+        app:layout_constraintEnd_toStartOf="@+id/PauseButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/PauseButton" />
+
+    <View
+        android:id="@+id/view2"
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:background="#929191"
+        app:layout_constraintBottom_toBottomOf="@+id/PauseButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/PauseButton"
+        app:layout_constraintTop_toTopOf="@+id/PauseButton" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="35dp"
+        android:text="@string/temperature"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/timerTextView" />
+
+    <TextView
+        android:id="@+id/pressureTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="35dp"
+        android:text="@string/pressure"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
