--- a/app/src/main/res/layout/activity_live_recording.xml
+++ b/app/src/main/res/layout/activity_live_recording.xml
@@ -130,24 +130,24 @@
         android:id="@+id/SpeedTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="50dp"
-        android:text="Travel speed:"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view" />
+        android:layout_marginTop="30dp"
+        android:gravity="center"
+        android:text="Travel speed"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="@+id/PauseButton"
+        app:layout_constraintStart_toStartOf="@+id/PauseButton"
+        app:layout_constraintTop_toBottomOf="@+id/PauseButton" />
 
     <TextView
         android:id="@+id/distanceTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
         android:layout_marginTop="35dp"
-        android:text="Travel speed:"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:gravity="center"
+        android:text="Distance travelled "
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="@+id/SpeedTextView"
+        app:layout_constraintStart_toStartOf="@+id/SpeedTextView"
         app:layout_constraintTop_toBottomOf="@+id/SpeedTextView" />
 
     <Button
@@ -160,5 +160,28 @@
         android:text="Finish"
         app:layout_constraintStart_toEndOf="@+id/button2"
         app:layout_constraintTop_toTopOf="@+id/button2" />
+
+    <TextView
+        android:id="@+id/altitudeTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="35dp"
+        android:gravity="center"
+        android:text="Altitude"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="@+id/distanceTextView"
+        app:layout_constraintStart_toStartOf="@+id/distanceTextView"
+        app:layout_constraintTop_toBottomOf="@+id/distanceTextView" />
+
+    <TextView
+        android:id="@+id/dataPointTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginRight="15dp"
+        android:text="DataPoint"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
