--- a/app/src/main/res/layout/row_activity_type.xml
+++ b/app/src/main/res/layout/row_activity_type.xml
@@ -7,7 +7,7 @@
     <TextView
         android:id="@+id/activityTextView"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="50dp"
         android:layout_weight="1"
         android:background="@drawable/background_selected"
         android:gravity="center_vertical"
