- Firebase is working fine. Possible to save hikes and to retrieve them - I added the template to fill for Adrien. The only thing to be done is to complete all the new TODO in order to get the microcontroller's data

--- a/app/src/main/res/layout/activity_recording_analysis.xml
+++ b/app/src/main/res/layout/activity_recording_analysis.xml
@@ -7,10 +7,11 @@
     tools:context=".ui.main.RecordingAnalysisActivity">
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/SaveButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
+        android:onClick="saveButtonTapped"
         android:text="Save"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
