--- a/app/src/main/res/layout/row_first_statistic.xml
+++ b/app/src/main/res/layout/row_first_statistic.xml
@@ -14,7 +14,7 @@
         android:background="#A59599"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/HikeNameLabel" />
+        app:layout_constraintTop_toBottomOf="@+id/HikeNameEditText" />
 
     <View
         android:id="@+id/view18"
@@ -47,15 +47,18 @@
         app:layout_constraintTop_toTopOf="@+id/view15"
         app:layout_constraintVertical_bias="0.0" />
 
-    <TextView
-        android:id="@+id/HikeNameLabel"
-        android:layout_width="wrap_content"
+    <EditText
+        android:id="@+id/HikeNameEditText"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="20dp"
-        android:text="This is the name"
+        android:layout_marginEnd="30dp"
+        android:layout_marginRight="30dp"
+        android:hint="Activity Name"
         android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
