Add a bunch of comments and add more statistics in ProfileFragment

--- a/app/src/main/res/layout/row_history.xml
+++ b/app/src/main/res/layout/row_history.xml
@@ -5,6 +5,10 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="12dp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -13,13 +17,13 @@
         <Space
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="2" />
+            android:layout_weight="1.5" />
 
         <ImageView
             android:id="@+id/exerciseTypeIcon"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="5"
+            android:layout_weight="6"
             android:adjustViewBounds="true"
             android:cropToPadding="false"
             app:srcCompat="@drawable/example_map" />
@@ -27,7 +31,7 @@
         <Space
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="2" />
+            android:layout_weight="1.5" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -135,5 +139,9 @@
         </LinearLayout>
 
     </LinearLayout>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="12dp" />
 
 </LinearLayout>
