--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#FF8800</color>
+    <color name="colorPrimaryDark">#E67A00</color>
     <color name="colorAccent">#D81B60</color>
     <color name="pressed_color">#F5B237</color>
     <color name="default_color">#00000000</color>
