Modofication of the popup

--- a/app/src/main/res/layout/fragment_new_recording.xml
+++ b/app/src/main/res/layout/fragment_new_recording.xml
@@ -63,10 +63,9 @@
         android:id="@+id/textTile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
         android:layout_marginTop="50dp"
         android:text="Sensortile:"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Switch
