Modification of recolting microconctroller data

--- a/app/src/main/res/layout/activity_live_recording.xml
+++ b/app/src/main/res/layout/activity_live_recording.xml
@@ -169,7 +169,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="NaN"
+        android:text="21.6 [C]"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/view4"
         app:layout_constraintStart_toStartOf="parent"
@@ -179,7 +179,7 @@
         android:id="@+id/pressureTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="NaN"
+        android:text="1090.86 [MPa]"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/view8"
         app:layout_constraintStart_toStartOf="@+id/view8"
